syntax = "proto3";

package pubSub;

service Notifier {	// Greeter
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  //
  rpc Data (DataRequest) returns (stream DataReply) {}
}

message DataRequest {}

message DataReply {
  string productName = 1;
  double productPrice = 2;
}

//
message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
